data/derived/comb/progs/unify/prog6835.ml.out
Characters 164-166:
  | Average (e1, e2) -> (e1 +. e2) /. 2
                         ^^
Error: This expression has type expr but an expression was expected of type
         float
